--- a/WebContent/processing-js/index.html
+++ b/WebContent/processing-js/index.html
@@ -82,7 +82,7 @@ var draw = function() {
  <!-- Include the processing.js library -->
  <!-- See https://khanacademy.zendesk.com/hc/en-us/articles/202260404-What-parts-of-ProcessingJS-does-Khan-Academy-support- for differences -->
  <script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.js"></script> 
- <script src="wf-coding-utils.js"></script>
+ <script src="js/wf-coding-utils.js"></script>
  
  <script>
 
