--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -111,6 +111,10 @@
 				<td></td>
 			</tr>
 			<tr>
+				<td><a href="simple-webpage/index.html" target="_blank">simple web page</a></td>
+				<td></td>
+			</tr>
+			<tr>
 				<td><a href="stack-overflow/index.html" target="_blank">stack-overflow</a></td>
 				<td></td>
 			</tr>
